tests/tests_ex22/tough_test/errors.txt
/home/kali/Desktop/OS/EX2/cwd/tests_ex22/tough_test/students/biu_student_terrible/cccgcc.c:6:2: error: expected identifier or ‘(’ before ‘}’ token
    6 | }}
      |  ^
